--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1678,8 +1678,8 @@ input[type="checkbox"] .styled:checked+label::after, input[type="radio"] .styled
 	font-size: 16px;
 	border: #000000 solid 2px;
 	padding: 16px 70px;
-	background-color: #000000;
-	color: #fff;
+	background-color: rgb(106, 104, 104);
+	color: black;
 }
 .send-btn:hover {
 	background-color: #ff0000;
